--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         <div id="app"></div>
         <footer>
             <div class="logo">
-                <img src="images/logo-white.png" alt="logo-white">
+                <img src="images/logo/logo-white.png" alt="White Logo">
+            </div>
+            <div class="address">
+                
             </div>
             <div class="copyright">copyright 2019 travel-fly. All rights reserved</div>
             <div class="socialmedia">
-                <img src="images/Facebook__x28_alt_x29_.png" alt="Facebook Logo">
-                <img src="images/Instagram.png" alt="Facebook Logo">
-                <img src="images/Path 5.png" alt="Facebook Logo">
+                <img src="images/social-media/facebook.svg" alt="Facebook Logo">
+                <img src="images/social-media/instagram.svg" alt="Instagram Logo">
+                <img src="images/social-media/twitter.svg" alt="Twitter Logo">
             </div>
         </footer>
         <script src="lib/jquery-3.6.0.min.js"></script>
