--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero home-hero-image">
         <nav>
-            <div class="logo"><img src="images/logo-white.png" alt="logo-white"></div>
+            <div class="logo"><img src="images/logo/logo-white.png" alt="logo-white"></div>
             <div class="links"></div>
             <div><a id="home" href="#">home</a></div><div class="pipe">|</div>
             <div><a id="about" href="#">about</a></div><div class="pipe">|</div>
@@ -23,25 +23,27 @@
         <div class="smallbanner">Less important text goes here</div>
         <div class="lorem"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.<i></div>
         <br>
-        <div class="readmore">Read More</div>
-        <div id="app"></div>
-        <footer>
-            <div class="logo">
-                <img src="images/logo/logo-white.png" alt="White Logo">
-            </div>
-            <div class="address">
-                
-            </div>
-            <div class="copyright">copyright 2019 travel-fly. All rights reserved</div>
-            <div class="socialmedia">
-                <img src="images/social-media/facebook.svg" alt="Facebook Logo">
-                <img src="images/social-media/instagram.svg" alt="Instagram Logo">
-                <img src="images/social-media/twitter.svg" alt="Twitter Logo">
-            </div>
-        </footer>
-        <script src="lib/jquery-3.6.0.min.js"></script>
-        <script type="module" src="model/model.js"></script>
-        <script type="module" src="app/app.js"></script>
+        <div class="siteButton">Read More</div>
     </div>
+    <div id="app"><img src="images/logo/logo-white.png" alt="White Logo"></div>
+    <footer>
+        <div class="logo">
+            <img src="images/logo/logo-white.png" alt="White Logo">
+        </div>
+        <div class="address">
+            <div class="siteButton">
+                Buy Now
+            </div>
+        </div>
+        <div class="copyright">copyright 2019 travel-fly. All rights reserved</div>
+        <div class="socialmedia">
+            <img src="images/social-media/facebook.png" alt="Facebook Logo">
+            <img src="images/social-media/instagram.png" alt="Instagram Logo">
+            <img src="images/social-media/twitter.png" alt="Twitter Logo">
+        </div>
+    </footer>
+    <script src="lib/jquery-3.6.0.min.js"></script>
+    <script type="module" src="model/model.js"></script>
+    <script type="module" src="app/app.js"></script>
 </body>
 </html>
