--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero home-hero-image">
         <nav>
-            <div class="logo"><img src="images/logo/logo-white.png" alt="logo-white"></div>
+            <div class="logo"><img src="images/logo/logo-black.png" alt="logo-black"></div>
             <div class="links"></div>
             <div><a id="home" href="#">home</a></div><div class="pipe">|</div>
             <div><a id="about" href="#">about</a></div><div class="pipe">|</div>
