--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="hero home-hero-image">
         <nav>
-            <div class="logo"><img src="images/logo/logo-black.png" alt="logo-black"></div>
+            <div class="logo"><img src="images/logo/logo-white.png" alt="logo-white"></div>
             <div class="links"></div>
             <div><a id="home" href="#">home</a></div><div class="pipe">|</div>
             <div><a id="about" href="#">about</a></div><div class="pipe">|</div>
-            <div><a id="tours" href="#">gallery</a></div><div class="pipe">|</div>
+            <div><a id="gallery" href="#">gallery</a></div><div class="pipe">|</div>
+            <div><a id="gallery1" href="#">gallery1</a></div><div class="pipe">|</div>
             <div><a id="blog" href="#">blog</a></div><div class="pipe">|</div>
             <div><a id="contact" href="#">contact</a></div><div class="pipe">|</div>
         </nav>
@@ -22,58 +23,26 @@
         <div class="smallbanner"><i>Less important text goes here</i></div>
         <div class="lorem"><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Fugiat aliquid minus nemo sed est.<i></div>
         <br>
-        <div class="siteButton">Read More</div>
+        <div class="readmore">Read More</div>
     </div>
     <div id="app">
-        <div class="home">
-            <div class="homequote">
-                <p>“Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo”
-                </p>
-                <div class="name">John Smith</div>
-                <div class="position">Corporation CEO, books author.</div>
-            </div>
-            <div class="upcomingevents">
-                <div class="upcomingheadline">UPCOMING EVENTS</div>
-                <div class="upcomingevents1">
-                    <div class="dateblock1">
-                        <div class="date1"></div>
-                            <div class="line1">06</div>
-                            <div class="line2">JUN</div>
-                        </div>
-                    <div class="text1">
-                        <div class="blurb1"><p>Sed et persipiatis unde omnis iste natus</p></div>
-                        <div class="blurb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid temporibus quos aspernatur</div>
-                    </div>
-                </div>
-            <div class="upcomingevents2">
-                <div class="dateblock2">30<br>JUL</div>
-                <div class="text1"><div class="blurb1"><p>Sed et persipiatis unde omnis iste natus</p></div>
-                <div class="blurb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid temporibus quos aspernatur</div></div>
-            </div>
-            <div class="upcomingevents3">
-                <div class="dateblock3">30<br>AUG</div>
-                <div class="text1"><div class="blurb1"><p>Sed et persipiatis unde omnis iste natus</p></div>
-                <div class="blurb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid temporibus quos aspernatur</div></div>
-            </div>
-            <div class="upcomingevents4">
-                <div class="dateblock4">23<br>NOV</div>
-                <div class="text1"><div class="blurb1"><p>Sed et persipiatis unde omnis iste natus</p></div>
-                <div class="blurb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid temporibus quos aspernatur</div></div>
-            </div>
-            <div class="upcomingevents5">
-                <div class="dateblock5">23<br>DEC</div>
-                <div class="text1"><div class="blurb1"><p>Sed et persipiatis unde omnis iste natus</p></div>
-                <div class="blurb2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid temporibus quos aspernatur</div></div>
+        <div class="gallery1">
+            <div class="galimage1">
+                <div class="gal1text1">1.</div>
+                <div class="gal1text2">food festival</div>
+
             </div>
         </div>
-    </div>
+    </div>    
     <footer>
         <div class="logo">
             <img src="images/logo/logo-white.png" alt="White Logo">
         </div>
         <div class="address">420 Smoke St. Los Angeles, CA 46318<br>(213)-467-2627<br>info@eventsy.com</div>
-        <div class="emailbox">Enter your email to join newsletter…</div>
+        <div class="emailstuff">
+            <div class="emailbox">Enter your email to join newsletter…</div>
         <div class="subscribe">SUBSCRIBE</div>
+        </div>
         <div class="socialmedia">
             <img src="images/social-media/facebook.png" alt="Facebook Logo">
             <img src="images/social-media/instagram.png" alt="Instagram Logo">
@@ -81,6 +50,7 @@
         </div>
         <div class="copyright">copyright 2019 eventsy. All rights reserved</div>
     </footer>
+
     <script src="lib/jquery-3.6.0.min.js"></script>
     <script type="module" src="model/model.js"></script>
     <script type="module" src="app/app.js"></script>
