--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <div><a id="about" href="#">about</a></div><div class="pipe">|</div>
             <div><a id="gallery" href="#">gallery</a></div><div class="pipe">|</div>
             <div><a id="gallery1" href="#">gallery1</a></div><div class="pipe">|</div>
+            <div><a id="gallery2" href="#">gallery2</a></div><div class="pipe">|</div>
+            <div><a id="gallery3" href="#">gallery3</a></div><div class="pipe">|</div>
+            <div><a id="gallery4" href="#">gallery4</a></div><div class="pipe">|</div>
+            <div><a id="gallery5" href="#">gallery5</a></div><div class="pipe">|</div>
             <div><a id="blog" href="#">blog</a></div><div class="pipe">|</div>
             <div><a id="contact" href="#">contact</a></div><div class="pipe">|</div>
         </nav>
@@ -30,7 +34,14 @@
             <div class="galimage1">
                 <div class="gal1text1">1.</div>
                 <div class="gal1text2">food festival</div>
-
+            </div>
+            <div class="gal1text3">
+                <div class="leftcol">
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                </div>
+                <div class="rightcol">
+                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
+                </div>
             </div>
         </div>
     </div>    
