--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <div><a id="gallery4" href="#">gallery4</a></div><div class="pipe">|</div>
             <div><a id="gallery5" href="#">gallery5</a></div><div class="pipe">|</div>
             <div><a id="blog" href="#">blog</a></div><div class="pipe">|</div>
+            <div><a id="blog1" href="#">blog1</a></div><div class="pipe">|</div>
+            <div><a id="blog2" href="#">blog2</a></div><div class="pipe">|</div>
+            <div><a id="blog3" href="#">blog3</a></div><div class="pipe">|</div>
+            <div><a id="blog4" href="#">blog4</a></div><div class="pipe">|</div>
+            <div><a id="blog5" href="#">blog5</a></div><div class="pipe">|</div>
             <div><a id="contact" href="#">contact</a></div><div class="pipe">|</div>
         </nav>
         <div class="bannertext">Header goes here</div>
@@ -30,68 +35,18 @@
         <div class="readmore">Read More</div>
     </div>
     <div id="app">
-        <div class="blog">
-            <div class="blogheadline">BLOG:</div>
-            <div class="blogheadborder"></div>
-            <div class="blogcol1">
-                <div class="jun">
-                    <div class="box1">
-                        <div class="date6">06</div>
-                        <div class="month6">JUN</div>
-                    </div>
-                    <div class="box1-1">
-                        <div class="pic1"></div>
-                        <div class="boxpara1">Sed et persipiatis unde omnis iste natus</div>
-                        <div class="boxpara2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </div>
-                    </div>
-                </div>
-                <div class="aug">
-                    <div class="box2">
-                        <div class="date7">30</div>
-                        <div class="month7">AUG</div>
-                    </div>
-                    <div class="box2-1">
-                        <div class="pic2"></div>
-                        <div class="boxpara3">Sed et persipiatis unde omnis iste natus</div>
-                        <div class="boxpara4">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </div>
-                    </div>
-                </div>
-                <div class="dec">
-                    <div class="box3">
-                        <div class="date8">23</div>
-                        <div class="month8">DEC</div>
-                    </div>
-                    <div class="box3-1">
-                        <div class="pic3"></div>
-                        <div class="boxpara5">Sed et persipiatis unde omnis iste natus</div>
-                        <div class="boxpara6">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </div>
-                    </div>
+        <div class="blog1">
+            <div class="blog1img">
+                <div class="blog1calendar">
+                    <div class="blog1date">06</div>
+                    <div class="blog1month">JUN</div>
                 </div>
             </div>
-            <div class="blogcol2">
-                <div class="jul">
-                    <div class="box4">
-                        <div class="date9">30</div>
-                        <div class="month9">JUL</div>
-                    </div>
-                    <div class="box4-1">
-                        <div class="pic4"></div>
-                        <div class="boxpara7">Sed et persipiatis unde omnis iste natus</div>
-                        <div class="boxpara8">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </div>
-                    </div>
-                </div>
-                <div class="nov">
-                    <div class="box5">
-                        <div class="date10">23</div>
-                        <div class="month10">NOV</div>
-                    </div>
-                    <div class="box5-1">
-                        <div class="pic5"></div>
-                        <div class="boxpara9">Sed et persipiatis unde omnis iste natus</div>
-                        <div class="boxpara10">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </div>
-                    </div>
-                </div>
-            </div>
+            <div class="blog1header1">Header #1</div>
+            <div class="blog1header1para1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </div>
+            <div class="blog1header1para2">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </div>
+            <div class="blog1header2">Header #2</div>
+            <div class="blog1header2para1">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </div>
         </div>
     </div>    
     <footer>
@@ -110,7 +65,6 @@
         </div>
         <div class="copyright">copyright 2019 eventsy. All rights reserved</div>
     </footer>
-
     <script src="lib/jquery-3.6.0.min.js"></script>
     <script type="module" src="model/model.js"></script>
     <script type="module" src="app/app.js"></script>
