--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
         <nav>
             <div class="logo"><img src="images/logo/logo-white.png" alt="logo-white"></div>
             <div class="links"></div>
-            <div><a id="home" href="#">home</a></div><div class="pipe">|</div>
-            <div><a id="about" href="#">about</a></div><div class="pipe">|</div>
-            <div><a id="gallery" href="#">gallery</a></div><div class="pipe">|</div>
-            <div><a id="gallery1" href="#">gallery1</a></div><div class="pipe">|</div>
-            <div><a id="gallery2" href="#">gallery2</a></div><div class="pipe">|</div>
-            <div><a id="gallery3" href="#">gallery3</a></div><div class="pipe">|</div>
-            <div><a id="gallery4" href="#">gallery4</a></div><div class="pipe">|</div>
-            <div><a id="gallery5" href="#">gallery5</a></div><div class="pipe">|</div>
-            <div><a id="blog" href="#">blog</a></div><div class="pipe">|</div>
-            <div><a id="blog1" href="#">blog1</a></div><div class="pipe">|</div>
-            <div><a id="blog2" href="#">blog2</a></div><div class="pipe">|</div>
-            <div><a id="blog3" href="#">blog3</a></div><div class="pipe">|</div>
-            <div><a id="blog4" href="#">blog4</a></div><div class="pipe">|</div>
-            <div><a id="blog5" href="#">blog5</a></div><div class="pipe">|</div>
-            <div><a id="contact" href="#">contact</a></div><div class="pipe">|</div>
+            <div><a id="home" href="#">home</a></div><div class="pipe">/</div>
+            <div><a id="about" href="#">about</a></div><div class="pipe">/</div>
+            <div><a id="gallery" href="#">gallery</a></div><div class="pipe">/</div>
+            <div><a id="gallery1" href="#">gallery1</a></div><div class="pipe">/</div>
+            <div><a id="gallery2" href="#">gallery2</a></div><div class="pipe">/</div>
+            <div><a id="gallery3" href="#">gallery3</a></div><div class="pipe">/</div>
+            <div><a id="gallery4" href="#">gallery4</a></div><div class="pipe">/</div>
+            <div><a id="gallery5" href="#">gallery5</a></div><div class="pipe">/</div>
+            <div><a id="blog" href="#">blog</a></div><div class="pipe">/</div>
+            <div><a id="blog1" href="#">blog1</a></div><div class="pipe">/</div>
+            <div><a id="blog2" href="#">blog2</a></div><div class="pipe">/</div>
+            <div><a id="blog3" href="#">blog3</a></div><div class="pipe">/</div>
+            <div><a id="blog4" href="#">blog4</a></div><div class="pipe">/</div>
+            <div><a id="blog5" href="#">blog5</a></div><div class="pipe">/</div>
+            <div><a id="contact" href="#">contact</a></div><div class="pipe">/</div>
         </nav>
         <div class="bannertext">Header goes here</div>
         <div class="smallbanner"><i>Less important text goes here</i></div>
@@ -36,7 +36,22 @@
     </div>
     <div id="app">
         <div class="contact">
-            
+            <div class="contactheadline">CONTACT US:</div>
+            <div class="contactborderbox">
+                <div class="contactborder"></div>
+            </div>
+            <div class="inputs">
+                <div class="column1">
+                    <div class="yourname">Your name...</div>
+                    <div class="emailaddress">Email Address...</div>
+                    <div class="company">Company...</div>
+                    <div class="message">Message...</div>
+                </div>
+                <div class="column2">
+                    <div class="map"></div>
+                </div>
+            </div>
+            <div class="submit">SEND MESSAGE</div>
         </div>
     </div>    
     <footer>
